[package]
name = "kprobetcp"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# TODO: change to the stable version by the next release = 0.12
httparse = "1"
chrono = { version = "0.4", features = ["clock"] }
aya = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
kprobetcp-common = { path = "../kprobetcp-common", features = ["user"] }
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
serde_json = "1"
hpack = "0.3"
clickhouse = "0.11"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
cargo_metadata = "0.23.0"

[[bin]]
name = "kprobetcp"
path = "src/main.rs"
